--- a/CSS/Ejercicios CSS/css/Ejercicio1_styles.css
+++ b/CSS/Ejercicios CSS/css/Ejercicio1_styles.css
@@ -20,6 +20,8 @@ div {
     background-color: white;
 
     color: dimgrey;
+
+    padding: 1px;
 }
 
 h1 {
@@ -33,6 +35,8 @@ h1 {
     text-align: center;
 
     margin-bottom: 1.5em;
+
+    margin-left: 14px;
 }
 
 h2 {
@@ -46,6 +50,8 @@ h2 {
     margin-top: 2em;
 
     margin-bottom: 1.5em;
+    
+    margin-left: 1em;
 
     width: 80%;
 }
